--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,72 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+next-route-announcer{
+display:none;
+}
+
+@layer base {
+  :root {
+--background:0 0% 100%;
+--foreground:0 0% 3.9%;
+--card:0 0% 100%;
+--card-foreground:0 0% 3.9%;
+--popover:217, 22%, 7%, 1;
+--popover-foreground:0 0% 93%;
+--primary:0 0% 9%;
+--primary-foreground:212 19% 15%;
+--secondary:0 0% 69%;
+--secondary-foreground:0 0% 9%;
+--muted:212 19% 15%;
+--muted-foreground:0 0% 45.1%;
+--accent:212 19% 15%;
+--accent-foreground:0 0% 93%;
+--destructive:0 84.2% 60.2%;
+--destructive-foreground:212 19% 15%;
+--border:212 19% 15%;
+--input:0 0% 89.8%;
+--ring:0 0% 3.9%;
+--chart-1:12 76% 61%;
+--chart-2:173 58% 39%;
+--chart-3:197 37% 24%;
+--chart-4:43 74% 66%;
+--chart-5:27 87% 67%;
+--radius:0.5rem;
+}
+  /* .dark {
+--background:0 0% 3.9%;
+--foreground:212 19% 15%;
+--card:0 0% 3.9%;
+--card-foreground:212 19% 15%;
+--popover:0 0% 3.9%;
+--popover-foreground:212 19% 15%;
+--primary:212 19% 15%;
+--primary-foreground:0 0% 9%;
+--secondary:212 19% 15%;
+--secondary-foreground:212 19% 15%;
+--muted:212 19% 15%;
+--muted-foreground:212 19% 15%;
+--accent:212 19% 15%;
+--accent-foreground:212 19% 15%;
+--destructive:0 62.8% 30.6%;
+--destructive-foreground:212 19% 15%;
+--border:212 19% 15%;
+--input:212 19% 15%;
+--ring:0 0% 83.1%;
+--chart-1:220 70% 50%;
+--chart-2:160 60% 45%;
+--chart-3:30 80% 55%;
+--chart-4:280 65% 60%;
+--chart-5:340 75% 55%;
+} */
+}
+
+@layer base {
+  * {
+    @apply border-border;
+}
+  body {
+    @apply bg-background text-foreground;
+}
+}
