--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@ display:none;
 @layer base {
   :root {
 --background:0 0% 100%;
---foreground:0 0% 3.9%;
+--foreground:0 0% 93%;
 --card:0 0% 100%;
 --card-foreground:0 0% 3.9%;
 --popover:217, 22%, 7%, 1;
@@ -25,8 +25,8 @@ display:none;
 --destructive:0 84.2% 60.2%;
 --destructive-foreground:212 19% 15%;
 --border:212 19% 15%;
---input:0 0% 89.8%;
---ring:0 0% 3.9%;
+--input:218, 14%, 15%, 1;
+--ring:0 0% 93%;
 --chart-1:12 76% 61%;
 --chart-2:173 58% 39%;
 --chart-3:197 37% 24%;
@@ -34,39 +34,16 @@ display:none;
 --chart-5:27 87% 67%;
 --radius:0.5rem;
 }
-  /* .dark {
---background:0 0% 3.9%;
---foreground:212 19% 15%;
---card:0 0% 3.9%;
---card-foreground:212 19% 15%;
---popover:0 0% 3.9%;
---popover-foreground:212 19% 15%;
---primary:212 19% 15%;
---primary-foreground:0 0% 9%;
---secondary:212 19% 15%;
---secondary-foreground:212 19% 15%;
---muted:212 19% 15%;
---muted-foreground:212 19% 15%;
---accent:212 19% 15%;
---accent-foreground:212 19% 15%;
---destructive:0 62.8% 30.6%;
---destructive-foreground:212 19% 15%;
---border:212 19% 15%;
---input:212 19% 15%;
---ring:0 0% 83.1%;
---chart-1:220 70% 50%;
---chart-2:160 60% 45%;
---chart-3:30 80% 55%;
---chart-4:280 65% 60%;
---chart-5:340 75% 55%;
-} */
+}
+@layer base {
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-}
-  body {
-    @apply bg-background text-foreground;
-}
-}
+/* .text-shadow {
+    text-shadow: #FFF 1px 0 20px;
+} */
