--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,19 @@ display:none;
     }
 }
 
-/* .text-shadow {
-    text-shadow: #FFF 1px 0 20px;
-} */
+@keyframes slide-fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade-in {  
+  animation: 500ms ease-out 0s 1 slide-fade-in;
+  
+}
+
