--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-next-route-announcer {
+/* next-route-announcer {
     display:none;
-}
+} */
 
 
 @layer base {
@@ -28,6 +28,7 @@ next-route-announcer {
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
+    --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -90,13 +91,9 @@ next-route-announcer {
   }
 }
 
-.fade-in {  
+/* .fade-in {  
 animation: 1s ease-in-out 1 slide-fade-in;
-}
-
-* {
-    @apply duration-150;
-}
+} */
 
 @layer base {
   * {
